@@ -1,14 +1,18 @@
 package com.shoesstore.shoesstore.controller;
 
 import com.shoesstore.shoesstore.model.*;
-import com.shoesstore.shoesstore.service.ProductService;
-import com.shoesstore.shoesstore.service.PurchaseOrderService;
-import com.shoesstore.shoesstore.service.SupplierService;
+import com.shoesstore.shoesstore.repository.PurchaseOrderAttachmentRepository;
+import com.shoesstore.shoesstore.service.*;
+import org.springframework.core.io.Resource;
+import org.springframework.http.*;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
-
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.server.ResponseStatusException;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -19,21 +23,32 @@ import java.util.stream.Collectors;
 public class PurchaseOrderController {
 
     private final PurchaseOrderService purchaseOrderService;
-    private final SupplierService supplierService;
-    private final ProductService productService;
+    private final SupplierService      supplierService;
+    private final ProductService       productService;
+    private final CustomUserDetailsService customUserDetailsService;
+    private final UserService userService;
+    private final PurchaseOrderAttachmentRepository purchaseOrderAttachmentRepository;
+    private final FileStorageService fileStorageService;
 
     public PurchaseOrderController(PurchaseOrderService purchaseOrderService,
                                    SupplierService supplierService,
-                                   ProductService productService) {
+                                   ProductService productService, CustomUserDetailsService customUserDetailsService, UserService userService, PurchaseOrderAttachmentRepository purchaseOrderAttachmentRepository, FileStorageService fileStorageService) {
         this.purchaseOrderService = purchaseOrderService;
-        this.supplierService = supplierService;
-        this.productService = productService;
+        this.supplierService      = supplierService;
+        this.productService       = productService;
+        this.customUserDetailsService = customUserDetailsService;
+        this.userService = userService;
+        this.purchaseOrderAttachmentRepository = purchaseOrderAttachmentRepository;
+        this.fileStorageService = fileStorageService;
     }
 
     @GetMapping
     public String list(Model model) {
         model.addAttribute("title", "Compras");
+        model.addAttribute("username", customUserDetailsService.getCurrentUserName());
         model.addAttribute("orders", purchaseOrderService.findAll());
+        model.addAttribute("completedOrders", purchaseOrderService.findAll().stream().filter(PurchaseOrder::isCompleted).toList());
+        model.addAttribute("sumOfTotals", purchaseOrderService.findAll().stream().map(PurchaseOrder::getTotal).reduce(BigDecimal.ZERO, BigDecimal::add));
         model.addAttribute("view", "orders/list");
         return "layout";
     }
@@ -41,58 +56,120 @@ public class PurchaseOrderController {
     @GetMapping("/create")
     public String createForm(Model model) {
         List<Supplier> suppliers = supplierService.findAll();
-
-        Map<Supplier, List<SupplierProduct>> productsToBuyBySupplier = suppliers.stream()
+        Map<Supplier, List<?>> map = suppliers.stream()
                 .collect(Collectors.toMap(
                         s -> s,
                         s -> new ArrayList<>(s.getSupplierProducts())
                 ));
-
-        model.addAttribute("productsToBuyBySupplier", productsToBuyBySupplier);
+        model.addAttribute("productsToBuyBySupplier", map);
+        model.addAttribute("order", new PurchaseOrder());
+        model.addAttribute("priorities", PriorityCondition.values());
         model.addAttribute("view", "orders/create");
-
         return "layout";
     }
 
     @PostMapping("/create")
-    public String createOrder(@RequestParam Long supplierId,
-                              @RequestParam Map<String, String> allRequestParams) {
-        Map<Long, Integer> productsQuantities = allRequestParams.entrySet().stream()
-                .filter(e -> e.getKey().startsWith("product_"))
-                .collect(Collectors.toMap(
-                        e -> Long.parseLong(e.getKey().substring("product_".length())),
-                        e -> Integer.parseInt(e.getValue())
-                ));
+    public String createOrder(
+            @RequestParam Long supplierId,
+            @RequestParam Map<String,String> allParams,
+            @ModelAttribute("order") PurchaseOrder order,
+            @RequestParam(name="attachmentFile", required=false) MultipartFile attachment,
+            @RequestParam(name="discountPct") BigDecimal discountPct,
+            @RequestParam(name="shippingCost") BigDecimal shippingCost,
+            RedirectAttributes redirectAttributes
+    ) {
+        try {
+            // Completar campos que no vienen del form directamente o que requieren lógica
+            order.setDiscount(discountPct);
+            order.setShippingCost(shippingCost);
+            order.setGeneratedDate(LocalDate.now());
 
-        purchaseOrderService.createOrder(supplierId, productsQuantities);
-        return "redirect:/orders";
+            // Usuario autenticado
+            User user = userService.getUserByUsername(customUserDetailsService.getCurrentUserName()).orElseThrow();
+            order.setUser(user);
+
+            // Mapear productos
+            Map<Long,Integer> qtys = allParams.entrySet().stream()
+                    .filter(e -> e.getKey().startsWith("product_"))
+                    .collect(Collectors.toMap(
+                            e -> Long.parseLong(e.getKey().substring(8)),
+                            e -> Integer.parseInt(e.getValue())
+                    ));
+
+            purchaseOrderService.createOrder(
+                    order,
+                    supplierId,
+                    qtys,
+                    discountPct,
+                    shippingCost,
+                    attachment
+            );
+
+            return "redirect:/orders";
+
+        } catch (Exception e) {
+            redirectAttributes.addFlashAttribute("error", "Error al crear orden: " + e.getMessage());
+            return "redirect:/orders/create";
+        }
     }
+
+
 
     @GetMapping("/{id}")
     public String viewOrder(@PathVariable Long id, Model model) {
         PurchaseOrder order = purchaseOrderService.findById(id);
+        if (order == null) {
+            return "redirect:/orders";
+        }
 
-        // Filtrar items con cantidad > 0 y calcular total
-        List<PurchaseOrderItem> filteredItems = order.getItems().stream()
-                .filter(item -> item.getQuantity() > 0)
-                .collect(Collectors.toList());
-
-        BigDecimal total = filteredItems.stream()
-                .map(item -> item.getPurchasePrice().multiply(BigDecimal.valueOf(item.getQuantity())))
+        var filtered = order.getItems().stream()
+                .filter(i -> i.getQuantity()>0)
+                .toList();
+        BigDecimal total = filtered.stream()
+                .map(i -> i.getPurchasePrice()
+                        .multiply(BigDecimal.valueOf(i.getQuantity())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("order", order);
-        model.addAttribute("filteredItems", filteredItems);
+        model.addAttribute("filteredItems", filtered);
         model.addAttribute("total", total);
         model.addAttribute("view", "orders/detail");
-
         return "layout";
     }
 
+    @DeleteMapping("/delete/{id}")
+    public String deleteOrder(@PathVariable Long id, RedirectAttributes redirectAttributes) {
+        try {
+            purchaseOrderService.deleteOrder(id);
+            redirectAttributes.addFlashAttribute("success", "Orden eliminada correctamente");
+        } catch (Exception e) {
+            redirectAttributes.addFlashAttribute("error", "Error al eliminar orden: " + e.getMessage());
+        }
+        return "redirect:/orders";
+    }
 
     @PostMapping("/{id}/complete")
-    public String complete(@PathVariable Long id) {
+    public String complete(@PathVariable Long id, Model model) {
         purchaseOrderService.completeOrder(id);
-        return "redirect:/orders/{id}";
+        return list(model);
     }
+
+    @GetMapping("/download/{attachmentId}")
+    public ResponseEntity<Resource> downloadAttachment(@PathVariable Long attachmentId) {
+        // Buscá la entidad Attachment por ID (asumo que tiene orderId y relativePath)
+        PurchaseOrderAttachment att = purchaseOrderAttachmentRepository.findById(attachmentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        Resource resource = fileStorageService.loadFileAsResource(att.getStoragePath());
+        String filename = att.getFileName(); // o extraelo desde la entidad
+
+        return ResponseEntity.ok()
+                .contentType(MediaTypeFactory.getMediaType(filename)
+                        .orElse(MediaType.APPLICATION_OCTET_STREAM))
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        "attachment; filename=\"" + filename + "\"")
+                .body(resource);
+    }
+
+
 }
